<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.history.HistoryActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:fontFamily="@font/bold"
        android:text="@string/history_layout_clear_history_button"
        android:textColor="@color/red"
        android:contentDescription="@string/history_clear_button_desc"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearHistoryButton"
        android:contentDescription="@string/history_recycler_view_desc"/>

</LinearLayout>