<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="300dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_bold"
            android:maxLength="100"
            android:maxWidth="300dp"
            android:maxLines="3"
            android:text="@string/news_item_title_of_article"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="300dp"
            android:contentDescription="@string/news_item_title_desc"/>

        <ToggleButton
            android:id="@+id/favoriteToggleButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/heart_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleTextView"
            android:textOff=""
            android:textOn=""
            android:text=""
            android:contentDescription="@string/news_item_toggle_desc"/>

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/news_item_resource"
            app:layout_constraintStart_toStartOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="7"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorTextView"
            app:layout_constraintWidth_max="320dp"
            android:contentDescription="@string/news_item_content_desc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>