<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/favoriteArticlesTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/favorite_activity_top_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/favorite_activity_top_text_desc"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/favoriteActivityBackButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/favorite_activity_back_button_desc"
        app:layout_constraintBottom_toBottomOf="@+id/favoriteArticlesTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteArticlesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite_recycler_view_desc"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteArticlesTop"
        android:paddingBottom="16dp"
        android:clipToPadding="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>

